--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,6 +40,8 @@ deploy:
   script:
     - apk update && apk add git curl
     - gem install dpl
+    - echo $HEROKU_APP_NAME
+    - echo $HEROKU_API_KEY
     - dpl --provider=heroku --app=$HEROKU_APP_NAME --api-key=$HEROKU_API_KEY
   environment:
     name: production
